--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,11 @@
 	path = src/docs/submodules/napari_hdf5_reader
 	url = https://github.com/fractal-napari-plugins-collection/napari_hdf5_reader.git
 	branch = develop
+[submodule "src/docs/submodules/napari_tissuemaps_interface"]
+	path = src/docs/submodules/napari_tissuemaps_interface
+	url = git@github.com:fractal-napari-plugins-collection/napari_tissuemaps_interface.git
+	branch = develop
+[submodule "src/docs/submodules/napari_addtional_viewport"]
+	path = src/docs/submodules/napari_addtional_viewport
+	url = git@github.com:fractal-napari-plugins-collection/napari_addtional_viewport.git
+	branch = develop
